fail_crate/tests/empty_pub.rs
use inew::New;

#[derive(New)]
#[new(pub())]
struct A;

fn main() {}
